Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,113 +1,128 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Roleta DStreet</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        background: #111;
-        color: #fff;
-        margin: 0;
-        padding: 20px;
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Roleta DStreet Company</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      text-align: center;
+    }
+
+    header {
+      padding: 20px 0;
+    }
+
+    .logo {
+      width: 180px;
+    }
+
+    .info {
+      margin-top: 10px;
+      font-size: 1.2em;
+    }
+
+    .roleta-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 70vh;
+    }
+
+    canvas {
+      border-radius: 50%;
+      margin-top: 20px;
+    }
+
+    button {
+      margin-top: 30px;
+      padding: 10px 20px;
+      font-size: 18px;
+      background: #e91e63;
+      border: none;
+      color: #fff;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .resultado {
+      margin-top: 20px;
+      font-size: 1.5em;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img class="logo" src="https://i.imgur.com/w3bARL2.png" alt="DStreet Company Logo">
+    <div class="info">
+      <p>R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</p>
+      <p>1 prêmio verdadeiro a cada 100 giros</p>
+    </div>
+  </header>
+
+  <div class="roleta-container">
+    <canvas id="roleta" width="300" height="300"></canvas>
+    <button onclick="girarRoleta()">Girar</button>
+    <div class="resultado" id="resultado"></div>
+  </div>
+
+  <script>
+    const premios = [
+      'Tente outra vez',
+      'Tente outra vez',
+      'Tente outra vez',
+      'Tente outra vez',
+      'Tente outra vez',
+      'Tente outra vez',
+      '3 Camisetas',
+      '5 Camisetas',
+      '10 Camisetas'
+    ];
+
+    let totalGiros = 0;
+    const canvas = document.getElementById('roleta');
+    const ctx = canvas.getContext('2d');
+    const slices = premios.length;
+
+    function desenharRoleta() {
+      const angulo = 2 * Math.PI / slices;
+      for (let i = 0; i < slices; i++) {
+        ctx.beginPath();
+        ctx.fillStyle = i % 2 === 0 ? '#e91e63' : '#2196f3';
+        ctx.moveTo(150, 150);
+        ctx.arc(150, 150, 150, angulo * i, angulo * (i + 1));
+        ctx.fill();
+        ctx.fillStyle = '#fff';
+        ctx.font = '16px Arial';
+        ctx.translate(150, 150);
+        ctx.rotate(angulo * (i + 0.5));
+        ctx.fillText(premios[i], 60, 5);
+        ctx.rotate(-angulo * (i + 0.5));
+        ctx.translate(-150, -150);
       }
-      #logo {
-        width: 150px;
-        margin-bottom: 20px;
-      }
-      #roleta {
-        margin: 0 auto;
-        width: 300px;
-        height: 300px;
-        border: 10px solid #fff;
-        border-radius: 50%;
-        position: relative;
-        overflow: hidden;
-      }
-      .fatia {
-        width: 50%;
-        height: 50%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform-origin: 0% 0%;
-        background: #333;
-        color: #fff;
-        padding: 20px;
-        box-sizing: border-box;
-        font-size: 14px;
-      }
-      #ponteiro {
-        width: 0;
-        height: 0;
-        border-left: 20px solid transparent;
-        border-right: 20px solid transparent;
-        border-bottom: 30px solid red;
-        margin: 20px auto;
-      }
-      #girar {
-        padding: 10px 20px;
-        font-size: 18px;
-        background-color: #28a745;
-        border: none;
-        color: white;
-        border-radius: 10px;
-        cursor: pointer;
-        margin-top: 20px;
-      }
-    </style>
-  </head>
-  <body>
-    <img id="logo" src="https://i.imgur.com/Qga2j3v.png" alt="Logo DStreet" />
-    <div id="ponteiro"></div>
-    <div id="roleta"></div>
-    <button id="girar">Girar</button>
+    }
 
-    <script>
-      const premios = [
-        "10 camisetas",
-        "Tente outra vez",
-        "5 camisetas",
-        "Tente outra vez",
-        "3 camisetas",
-        "Tente outra vez"
-      ];
+    desenharRoleta();
 
-      const cores = ["#e74c3c", "#2ecc71", "#3498db", "#f39c12", "#9b59b6", "#1abc9c"];
+    function girarRoleta() {
+      totalGiros++;
+      let resultadoIndex;
 
-      const roleta = document.getElementById("roleta");
-
-      function desenharRoleta() {
-        for (let i = 0; i < premios.length; i++) {
-          const fatia = document.createElement("div");
-          fatia.className = "fatia";
-          fatia.style.backgroundColor = cores[i % cores.length];
-          fatia.style.transform = `rotate(${(360 / premios.length) * i}deg) skewY(-60deg)`;
-          fatia.innerHTML = `<div style="transform: skewY(60deg) rotate(${(360 / premios.length) / 2}deg); margin-top: 60px;">${premios[i]}</div>`;
-          roleta.appendChild(fatia);
-        }
+      if (totalGiros % 100 === 0) {
+        resultadoIndex = Math.floor(Math.random() * (premios.length - 3)) + 6; // só prêmios reais
+      } else {
+        resultadoIndex = Math.floor(Math.random() * 6); // só "tente outra vez"
       }
 
-      let girando = false;
-
-      document.getElementById("girar").addEventListener("click", () => {
-        if (girando) return;
-        girando = true;
-
-        const anguloFinal = Math.floor(Math.random() * 360 + 1800); // 1800 = 5 voltas
-        roleta.style.transition = "transform 5s ease-out";
-        roleta.style.transform = `rotate(${anguloFinal}deg)`;
-
-        setTimeout(() => {
-          const angulo = anguloFinal % 360;
-          const index = Math.floor((360 - angulo + 30) % 360 / (360 / premios.length));
-          alert(`Resultado: ${premios[index]}`);
-          girando = false;
-        }, 5200);
-      });
-
-      desenharRoleta();
-    </script>
-  </body>
+      const resultado = premios[resultadoIndex];
+      document.getElementById('resultado').textContent = `Resultado: ${resultado}`;
+    }
+  </script>
+</body>
 </html>
