--- a/index.html
+++ b/index.html
@@ -1,128 +1,182 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Roleta da DStreet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Roleta DStreet</title>
   <style>
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
-      background-color: #111;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
-      padding-top: 30px;
+      background: #111;
+      color: #fff;
+      text-align: center;
     }
-    .logo {
-      max-width: 300px;
-      margin-bottom: 20px;
-    }
-    .headline {
-      font-size: 1.5rem;
-      margin-bottom: 10px;
-      color: #ffd700;
-      font-weight: bold;
-    }
-    .info {
-      margin-bottom: 20px;
-      font-size: 1rem;
-      color: #ccc;
-    }
-    #wheel {
-      width: 300px;
-      height: 300px;
-      border-radius: 50%;
-      border: 10px solid #fff;
-      position: relative;
-      overflow: hidden;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-    }
-    .segment {
-      width: 50%;
-      height: 50%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform-origin: 0% 0%;
-      background-color: #333;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.9rem;
-      font-weight: bold;
-    }
-    #spinButton {
+
+    header img {
       margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1rem;
+      width: 180px;
+    }
+
+    h1 {
+      margin-top: 20px;
+      font-size: 26px;
+      color: #ffce00;
       font-weight: bold;
-      background-color: #ffd700;
-      color: #111;
+      animation: piscar 1.5s infinite;
+    }
+
+    @keyframes piscar {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.4; }
+    }
+
+    .regras {
+      margin-top: 10px;
+      font-size: 18px;
+      color: #00ffea;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+    }
+
+    #roleta-container {
+      margin: 30px auto;
+      position: relative;
+      width: 320px;
+      height: 320px;
+    }
+
+    canvas {
+      border-radius: 50%;
+      background-color: #222;
+    }
+
+    #botao-girar {
+      margin-top: 20px;
+      padding: 12px 25px;
+      font-size: 18px;
+      background-color: #ffce00;
+      color: #000;
       border: none;
       border-radius: 10px;
       cursor: pointer;
+      font-weight: bold;
+    }
+
+    #resultado {
+      margin-top: 20px;
+      font-size: 20px;
+      color: #fff;
     }
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/Dstreetcompany/roleta/main/logo.jpg" alt="Logo DStreet" class="logo" />
-  <div class="headline">Gire e leve para casa até 10 camisetas!</div>
-  <div class="info">R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</div>
+  <header>
+    <img src="https://i.imgur.com/9UNN6dL.png" alt="Logo DStreet Company"/>
+  </header>
 
-  <div id="wheel"></div>
-  <button id="spinButton">Girar</button>
+  <h1>Gire e leve para casa até 10 camisetas!</h1>
+  <div class="regras">R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</div>
+
+  <div id="roleta-container">
+    <canvas id="roleta" width="320" height="320"></canvas>
+  </div>
+
+  <button id="botao-girar">GIRAR</button>
+
+  <div id="resultado"></div>
 
   <script>
-    const prizes = [
-      '10 CAMISETAS',
-      'TENTE OUTRA VEZ',
-      '5 CAMISETAS',
-      'TENTE OUTRA VEZ',
-      '3 CAMISETAS',
-      'TENTE OUTRA VEZ'
-    ];
+    const canvas = document.getElementById('roleta');
+    const ctx = canvas.getContext('2d');
+    const botao = document.getElementById('botao-girar');
+    const resultado = document.getElementById('resultado');
 
-    const colors = ['#ff0000', '#222', '#008000', '#222', '#0000ff', '#222'];
-    const wheel = document.getElementById('wheel');
-    const spinButton = document.getElementById('spinButton');
+    const premios = ["10 camisetas", "Tente outra vez", "5 camisetas", "Tente outra vez", "3 camisetas", "Tente outra vez"];
+    const cores = ["#ff3c3c", "#444", "#3cff3c", "#444", "#3c9fff", "#444"];
 
-    let angle = 0;
-    let currentRotation = 0;
+    let anguloAtual = 0;
+    let girando = false;
+    let girosFeitos = 0;
 
-    function drawWheel() {
-      wheel.innerHTML = '';
-      const angleStep = 360 / prizes.length;
+    function desenharRoleta() {
+      const raio = canvas.width / 2;
+      const centroX = canvas.width / 2;
+      const centroY = canvas.height / 2;
+      const anguloPorPremio = (2 * Math.PI) / premios.length;
 
-      for (let i = 0; i < prizes.length; i++) {
-        const segment = document.createElement('div');
-        segment.className = 'segment';
-        segment.innerText = prizes[i];
-        segment.style.backgroundColor = colors[i];
-        segment.style.transform = `rotate(${i * angleStep}deg) skewY(-60deg)`;
-        wheel.appendChild(segment);
+      for (let i = 0; i < premios.length; i++) {
+        ctx.beginPath();
+        ctx.moveTo(centroX, centroY);
+        ctx.fillStyle = cores[i];
+        ctx.arc(centroX, centroY, raio, i * anguloPorPremio, (i + 1) * anguloPorPremio);
+        ctx.lineTo(centroX, centroY);
+        ctx.fill();
+
+        ctx.save();
+        ctx.translate(centroX, centroY);
+        ctx.rotate(i * anguloPorPremio + anguloPorPremio / 2);
+        ctx.textAlign = "right";
+        ctx.fillStyle = "#fff";
+        ctx.font = "bold 14px Arial";
+        ctx.fillText(premios[i], raio - 10, 5);
+        ctx.restore();
       }
     }
 
-    function spinWheel() {
-      const prizeIndex = Math.floor(Math.random() * prizes.length);
-      const anglePerSegment = 360 / prizes.length;
-      const spins = 5;
-      angle = 360 * spins + prizeIndex * anglePerSegment;
-      currentRotation += angle;
+    function girarRoleta() {
+      if (girando) return;
+      girando = true;
+      resultado.textContent = '';
 
-      wheel.style.transition = 'transform 4s ease-out';
-      wheel.style.transform = `rotate(${currentRotation}deg)`;
+      girosFeitos++;
+
+      let premioIndex;
+      if (girosFeitos % 100 === 0) {
+        const opcoes = [0, 2, 4]; // índices com prêmios reais
+        premioIndex = opcoes[Math.floor(Math.random() * opcoes.length)];
+      } else {
+        const opcoes = [1, 3, 5]; // tente outra vez
+        premioIndex = opcoes[Math.floor(Math.random() * opcoes.length)];
+      }
+
+      const anguloPorPremio = 360 / premios.length;
+      const anguloFinal = 360 * 5 + (premioIndex * anguloPorPremio) + anguloPorPremio / 2;
+
+      let inicio = null;
+
+      function animar(timestamp) {
+        if (!inicio) inicio = timestamp;
+        const progresso = timestamp - inicio;
+        const angulo = easeOut(progresso / 3000) * anguloFinal;
+
+        anguloAtual = angulo;
+        desenhar(anguloAtual);
+        if (progresso < 3000) {
+          requestAnimationFrame(animar);
+        } else {
+          girando = false;
+          resultado.textContent = "Resultado: " + premios[premioIndex];
+        }
+      }
+
+      requestAnimationFrame(animar);
     }
 
-    spinButton.addEventListener('click', spinWheel);
+    function easeOut(t) {
+      return 1 - Math.pow(1 - t, 3);
+    }
 
-    drawWheel();
+    function desenhar(angulo) {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.save();
+      ctx.translate(canvas.width / 2, canvas.height / 2);
+      ctx.rotate((angulo * Math.PI) / 180);
+      ctx.translate(-canvas.width / 2, -canvas.height / 2);
+      desenharRoleta();
+      ctx.restore();
+    }
+
+    desenharRoleta();
+    botao.addEventListener('click', girarRoleta);
   </script>
 </body>
 </html>
-
